--- a/teacher_profile.html
+++ b/teacher_profile.html
@@ -13,6 +13,8 @@
    <link rel="stylesheet" href="css/style.css">
 
 </head>
+<script src="scripts/onclick.js"></script>
+
 <body>
 
 <header class="bg-primary py-3">
@@ -79,6 +81,9 @@
                <div class="col-6">
                   <p>Total Comments: <span class="text-primary fw-bold">52</span></p>
                </div>
+               <div class="col-6">
+                  <button id="favorite-teacher" class="btn btn-outline-primary btn-sm mt-2">Add to Favorites</button>   
+               </div>
             </div>
          </div>
       </div>
@@ -89,7 +94,7 @@
    <h1 class="text-center mb-4">Our Courses</h1>
    <div class="row g-4">
 
-      <div class="col-lg-3 col-md-6">
+       <div class="col-lg-3 col-md-6">
          <div class="card shadow-sm">
             <img src="images/thumb-1.png" class="card-img-top" alt="HTML Tutorial">
             <div class="card-body text-center">
