--- a/home.html
+++ b/home.html
@@ -149,7 +149,7 @@
                <div class="d-flex align-items-center">
                   <img src="images/pic-2.jpg" class="rounded-circle" width="40" height="40" alt="John Deo">
                   <div class="ms-2">
-                     <h6>John Deo</h6>
+                     <h6>Raim</h6>
                      <div class="text-warning">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -170,7 +170,7 @@
                <div class="d-flex align-items-center">
                   <img src="images/pic-3.jpg" class="rounded-circle" width="40" height="40" alt="Alice Smith">
                   <div class="ms-2">
-                     <h6>Alice Smith</h6>
+                     <h6>Erke Esmakhan</h6>
                      <div class="text-warning">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -191,7 +191,7 @@
                <div class="d-flex align-items-center">
                   <img src="images/pic-4.jpg" class="rounded-circle" width="40" height="40" alt="Mark Johnson">
                   <div class="ms-2">
-                     <h6>Mark Johnson</h6>
+                     <h6>Ayau</h6>
                      <div class="text-warning">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
