--- a/teachers.html
+++ b/teachers.html
@@ -67,10 +67,10 @@
          <div class="card shadow-sm">
             <img src="images/pic-3.jpg" class="card-img-top" alt="Jane Smith">
             <div class="card-body">
-               <h5 class="card-title">Jane Smith</h5>
-               <p class="card-text">Developer</p>
+               <h5 class="card-title">Batyrkhan Serik </h5>
+               <p class="card-text">CISCO</p>
                <p class="card-text">Playlists: 6, Videos: 22, Likes: 1500</p>
-               <a href="teacher_profile.html" class="btn btn-primary">View Profile</a>
+               <button onclick="window.location.href='teacher_profile.html'" class="btn btn-primary">View Profile</button>
             </div>
          </div>
       </div>
@@ -79,10 +79,10 @@
          <div class="card shadow-sm">
             <img src="images/pic-4.jpg" class="card-img-top" alt="Mark Lee">
             <div class="card-body">
-               <h5 class="card-title">Mark Lee</h5>
-               <p class="card-text">Data Scientist</p>
+               <h5 class="card-title">Ordabekov Azamat</h5>
+               <p class="card-text">Spring / Java</p>
                <p class="card-text">Playlists: 5, Videos: 20, Likes: 1350</p>
-               <a href="teacher_profile.html" class="btn btn-primary">View Profile</a>
+               <button onclick="window.location.href='teacher_profile.html'" class="btn btn-primary">View Profile</button>
             </div>
          </div>
       </div>
@@ -91,10 +91,10 @@
          <div class="card shadow-sm">
             <img src="images/pic-5.jpg" class="card-img-top" alt="Sarah Connor">
             <div class="card-body">
-               <h5 class="card-title">Sarah Connor</h5>
-               <p class="card-text">UX Designer</p>
+               <h5 class="card-title">Mazhit Moldir</h5>
+               <p class="card-text">TVMS</p>
                <p class="card-text">Playlists: 8, Videos: 30, Likes: 2000</p>
-               <a href="teacher_profile.html" class="btn btn-primary">View Profile</a>
+               <button onclick="window.location.href='teacher_profile.html'" class="btn btn-primary">View Profile</button>
             </div>
          </div>
       </div>
