--- a/profile.html
+++ b/profile.html
@@ -55,7 +55,7 @@
    <div class="row align-items-center">
       <div class="col-md-4 text-center">
          <img src="images/pic-1.jpg" class="rounded-circle img-fluid mb-3" alt="Profile Picture" width="200">
-         <h3>Shaikh Anas</h3>
+         <h3>Mergen Temirzhan</h3>
          <p>Student</p>
          <a href="update.html" class="btn btn-primary">Update Profile</a>
       </div>
@@ -95,7 +95,7 @@
                <div class="d-flex align-items-center">
                   <img src="images/pic-2.jpg" class="rounded-circle" width="40" height="40" alt="Reviewer Picture">
                   <div class="ms-2">
-                     <h6>John Deo</h6>
+                     <h6>Kairat Nurtas</h6>
                      <div class="text-warning">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -116,7 +116,7 @@
                <div class="d-flex align-items-center">
                   <img src="images/pic-3.jpg" class="rounded-circle" width="40" height="40" alt="Reviewer Picture">
                   <div class="ms-2">
-                     <h6>Alice Smith</h6>
+                     <h6>Toregali Toreali</h6>
                      <div class="text-warning">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -137,7 +137,7 @@
                <div class="d-flex align-items-center">
                   <img src="images/pic-4.jpg" class="rounded-circle" width="40" height="40" alt="Reviewer Picture">
                   <div class="ms-2">
-                     <h6>Mark Johnson</h6>
+                     <h6>Bisen Yerkebulan</h6>
                      <div class="text-warning">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -158,7 +158,7 @@
                <div class="d-flex align-items-center">
                   <img src="images/pic-5.jpg" class="rounded-circle" width="40" height="40" alt="Reviewer Picture">
                   <div class="ms-2">
-                     <h6>Emma Brown</h6>
+                     <h6>Travis Scott</h6>
                      <div class="text-warning">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -179,7 +179,7 @@
                <div class="d-flex align-items-center">
                   <img src="images/pic-6.jpg" class="rounded-circle" width="40" height="40" alt="Reviewer Picture">
                   <div class="ms-2">
-                     <h6>Michael Green</h6>
+                     <h6>Kanye West</h6>
                      <div class="text-warning">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
