--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
             <small>Student</small>
          </div>
          <a href="profile.html" class="btn btn-light ms-3">View Profile</a>
+         <button onclick="toggleTheme()" class="btn btn-light ms-3">Toggle Theme</button>
       </div>
    </div>
 </header>
@@ -156,6 +157,29 @@
       </div>
    </div>
 </section>
+<script>
+   function toggleTheme() {
+      document.body.classList.toggle('dark-mode');
+      document.querySelectorAll('header, .navbar, .card, section').forEach(element => {
+         element.classList.toggle('dark-mode');
+      });
+
+      if (document.body.classList.contains('dark-mode')) {
+         localStorage.setItem('theme', 'dark');
+      } else {
+         localStorage.setItem('theme', 'light');
+      }
+   }
+
+   window.onload = function() {
+      if (localStorage.getItem('theme') === 'dark') {
+         document.body.classList.add('dark-mode');
+         document.querySelectorAll('header, .navbar, .card, section').forEach(element => {
+            element.classList.add('dark-mode');
+         });
+      }
+   };
+</script>
 
 
 
